--- a/components/Compounds/header/Header.module.css
+++ b/components/Compounds/header/Header.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.212);
   padding: 15px 20px;
   display: flex;
   align-items: center;
@@ -10,6 +10,7 @@
 .logo {
   display: inline-block;
   vertical-align: top;
+  font-size: 1rem;
 }
 
 .title {
